--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <div class="one">
                     <div class="two" id="aim_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/2023aim_1.mp4" type="video/mp4">
+                            <source src="material/2023aim_2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -744,7 +744,7 @@
                 <div class="one">
                     <div class="two" id="tmech_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/2023tmech_1.mp4" type="video/mp4">
+                            <source src="material/2023tmech_2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -894,9 +894,9 @@
                 </script>
             </div>
             <section class="section2Content">
-                <h2 class="sectionContentTitle">State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
-                <h3 class="sectionContentSubTitle">
-                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
+                <h2 class="sectionContentTitleSmall">1: State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
+                <h3 class="sectionContentSubTitleSmall">
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a><ion-icon name="mail-outline"></ion-icon>, 
                     <a style="color: #999;">Songsong Rong</a>,
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
                     <a href="https://www.cae.cn/cae/html/main/colys/00679747.html" target="_blank">Deyi Li</a>,
@@ -905,12 +905,19 @@
                     <b>Kangyao Huang</b>,
                     <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>,
                 </h3>
-                <h3 class="sectionContentSubTitle">
-                    <em> 中国科学（技术科学）, SCIENTIA SINICA Techinologica, 2024</em> <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">TH-CPL-A</a>
+                <h3 class="sectionContentSubTitleSmall">
+                    <em> 中国科学（技术科学）, SCIENTIA SINICA Techinologica, 2024</em>, <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">TH-CPL-A</a>, <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">2024年4月-第54卷第4期封面文章-Cover Paper</a>
                 </h3>
-                <h3 class="sectionContentSubTitle">
-                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">2024年4月-第54卷第4期封面文章-Cover Paper</a>
+                <h2 class="sectionContentTitleSmall">2: Wind-Resistant Flight Control for Amphibious Flying Car</h2>
+                <h3 class="sectionContentSubTitleSmall">
+                    <b>Kangyao Huang</b>,
+                    <a style="color: #999;">Baoshang Zhou</a>,
+                    <a style="color: #999;">Songsong Rong</a>,
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a><ion-icon name="mail-outline"></ion-icon>,
+                    <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a><ion-icon name="mail-outline"></ion-icon>
                 </h3>
+                <h3 class="sectionContentSubTitleSmall">
+                    <em> International Conference on Guidance, Navigation and Control (<b>ICGNC</b>) 2024</em>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
                 <div class="dropdown"> <span>Abstract</span>
