--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <div class="one">
                     <div class="two" id="airgym_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/airgym_1.mp4" type="video/mp4">
+                            <source src="material/airgym_2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -1135,7 +1135,7 @@
                 <div class="one">
                     <div class="two" id="emNavi_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/X152b-ego.mp4" type="video/mp4">
+                            <source src="material/X152b-ego_1.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -1181,7 +1181,7 @@
                 <div class="one">
                     <div class="two" id="flyingcar_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/flyingcar.mp4" type="video/mp4">
+                            <source src="material/flyingcar_1.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <aside class="externalResourcesNav" style="margin-top:0%">
