--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                 <div class="one">
                     <div class="two" id="flyingcar_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="material/flyingcar_1.mp4" type="video/mp4">
+                            <source src="material/flyingcar_2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <aside class="externalResourcesNav" style="margin-top:0%">
@@ -1191,7 +1191,7 @@
                             <div class="dropdown"><span></span><a href="https://www.bilibili.com/video/BV1gN4y1a72Z/" target="_blank">Video</a></div>
                         </aside>
                     </div>
-                    <img src="material/flyingcar.jpg" width="100%">
+                    <img src="material/flyingcar.png" width="100%">
                 </div>
                 <script type="text/javascript">
                     function flyingcar_start() {
@@ -1306,7 +1306,7 @@
                     <b>Work with</b>
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@Bingo Intelligence Co., Ltd.</a>
                 </h3>
-                <p style="font-size: 10px;"><b>Brief:</b> In 2017, we built a solar-powered unmanned aerial vehicles and focused on enhancing the endurance. A key aspect of this involved redesigning the aerodynamic shape to improve efficiency. Additionally, our team developed a dynamic power system with low vortex drag variable-pitch propellers to adapt to varying wind speeds during flight, enabling them to operate efficiently across diverse conditions. This research contributes to the advancement of renewable energy-powered UAV technology, offering potential applications in various fields such as environmental monitoring, aerial photography, and telecommunications.</p>
+                <p style="font-size: 10px;"><b>Brief:</b> In 2017, we built a solar-powered unmanned aerial vehicles and focused on enhancing the endurance. Additionally, our team developed a dynamic power system with low vortex drag variable-pitch propellers to adapt to varying wind speeds during flight, enabling them to operate efficiently across diverse conditions. This research contributes to the advancement of renewable energy-powered UAV technology.</p>
                 <p style="font-size: 10px;color: rgba(1, 145, 193, 0.579);">
                 We honor the memory of Zhaoxi Wang, one of co-founders of the team, whose dedication and vision continue to inspire us as we move forward, and his spirit will forever remain an integral part of our journey,just like his aircraft did.
                 </p>
