--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <h3>PhD Candidate | Physical AI Researcher | Aerospace Engineer</h3>
         <hr>
         <p style="line-height: 15px;font-size: 12px;margin-bottom: auto;">I am Kangyao Huang (黄康尧 in Chinese) from China, working towards physical AI and robotics research and application. Currently, I am pursuing a PhD degree in Computer Science at <a style="color:#6e02ba" href="https://www.tsinghua.edu.cn/">Tsinghua University(THU)</a> under the supervision of Prof. <a href="https://sites.google.com/site/thuliuhuaping">Huaping Liu</a>, working closely with Prof. <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>, and focusing on robot learning, especially embodied interactive learning in simulation and Sim2Real policy transfer in reality.
-            Besides, I also hold an MRes degree in Robotics from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aerospace from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
-            <br>
-            <br> I also have experience in EAI, UAV, and autonomous driving. I led the development of the second/third generation of Tsinghua Mengshi flying car which is <b>the world's first electric manned rotorcraft ground-aerial vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
+            Besides, I also hold an MRes degree in Robotics from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aerospace from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer. My current research interest includes Embodied AI for virtual and real world practice. Meanwhile, I also follow ideas on aerial robotics, neuromorphic computing, and 3D Vision.
+            <!-- <br> I also have experience in Aircraft Design and Autonomous Driving. I led the development of the second/third generation of Tsinghua Mengshi flying car which is <b>the world's first electric manned rotorcraft ground-aerial vehicle</b> with integrated intelligent driving function. 
+            <br> -->
+        </p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -50,10 +51,10 @@
             <a href="https://orcid.org/0000-0002-5708-2620" target="_blank">
                 <img src="profile/orcid.png"  alt="sample" width="30"></a>
         </div>
-        <div class="socialNetworkNav">
+        <!-- <div class="socialNetworkNav">
             <a href="https://www.xiaohongshu.com/user/profile/638ceaa1000000001f01ce42" target="_blank">
                 <img src="profile/xhs.png"  alt="sample" width="30"></a>
-        </div>
+        </div> -->
     </aside>
 </header>
 
@@ -179,12 +180,12 @@
         <hr class="sectionTitleRule2">
 
         <!-- longfly -->
-        <!-- <div onmouseout="longfly_stop()" onmouseover="longfly_start()">	  
+        <div onmouseout="longfly_stop()" onmouseover="longfly_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
                 <div class="one">
                     <div class="two" id="longfly_image">
                         <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                            <source src="" type="video/mp4">
+                            <source src="material/longfly2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -215,7 +216,7 @@
                     <a>Xiangyang Ji</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> Submitted to TGRS 2026</em>
+                    <em> arXiv</em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%">
@@ -246,11 +247,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Paper</a></div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
+                <div class="dropdown"><span></span><a href="https://www.arxiv.org/pdf/2512.22010" target="_blank">Paper</a></div>
+                <!-- <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div> -->
             </aside>
         </div>
-        <br> -->
+        <br>
 
         <!-- ActiveEventNet+ -->
         <!-- <div onmouseout="activeEventNet_stop()" onmouseover="activeEventNet_start()">	  
@@ -1204,10 +1205,15 @@
                 <h2 class="sectionContentTitle"> GhostLoc: Geospatial High-precise Optical System for Tactical Localization</h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Work with</b> 
-                    <a style="color: #999;"> teammates </a><a style="font-style: italic;">@emNavi</a>: Kai Tang (CV), Hao Wang (System), Wantong Qin (Design), Tao Peng (Hardware)
+                    <a style="color: #999;"> teammates </a><a style="font-style: italic;">@emNavi</a>: <a href="https://github.com/Derkai52" target="_blank">Kai Tang</a>(CV), Hao Wang (System), Wantong Qin (Design), Tao Peng (Hardware)
                 </h3>
-                <p style="font-size: 10px;"><b>Brief:</b> GhostLoc is a compact, high-altitude visual positioning system that achieves GPS-level precision in denied environments by fusing Visual-Inertial Odometry (VIO) with a Visual Positioning System (VPS). Requiring only a single camera, IMU, and barometer, its lightweight, palm-sized design provides smooth, 6-DoF pose data at over 15 Hz with meter-level accuracy, enabling robust navigation for various aerial platforms without relying on GNSS signals. We integrated XFeat, LightGlue, and VINS-fusion in one rubust framework which is running on onboard computer with RK3588s. We tested the system on DJI Matric 350 platform for a long duration flight over 5km and 300~800m height. Kai Tang and Hao Wang are main contributors for this work.</p>
+                <p style="font-size: 10px;"><b>Brief:</b> GhostLoc is a compact, high-altitude visual positioning system that achieves GPS-level precision in denied environments by fusing Visual-Inertial Odometry (VIO) with a Visual Positioning System (VPS). Requiring only lowcost fisheye cameras, IMU, and barometer, it provides smooth 6-DoF pose estimation at over 15 Hz with meter-level accuracy, enabling robust navigation for various aerial platforms without relying on GNSS signals. We integrated all learning-based models in one robust framework running on an onboard computer with RK3588s.</p>
             </section>
+            <aside class="externalResourcesNav" style="margin-top:0%"> 
+                <div class="dropdown">
+                    <span></span><a href="https://emnavi.tech/GhostLoc/" target="_blank">GhostLoc</a>
+                </div>
+            </aside>
         </div>
         <br>
 
@@ -1462,31 +1468,65 @@
         <h2 class="sectionTitle">Education</h2>
         <hr class="section2">
 
-        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 10px;">
-            <group>
-                <img src="profile/清华logo.png" width="3%" height="3%">
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;2022~now,&emsp;</p>
-                <p>
-                    <a style="font-weight: bold; font-size: 11px;">PhD</a> candidate in Computer Science and Technology, <a style="font-weight: bold; font-size: 11px;">Tsinghua University</a>, China
-                </p>
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic; font-size: 11px;"> Robot Interactive Learning</p>
-            </group>
-            <group>
-                <img src="profile/UoS.jpg" width="3%" height="3%">
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;2019~2020,&emsp;</p>
-                <p>
-                    <a style="font-weight: bold; font-size: 11px;">MRes</a> in Control & Systems Engneering, <a style="font-weight: bold;color: rgb(4, 113, 222); font-size: 11px;" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="font-weight: bold; font-size: 11px;">the University of Sheffied</a>, UK
-                </p>
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic; font-size: 11px;">Cooperative Transport by Swarm Robots</p>
-            </group>
-            <group>
-                <img src="profile/西工大校标大图 蓝白版.jpg" width="3%" height="3%">
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;2012~2016,&emsp;</p>
-                <p>
-                    <a style="font-weight: bold; font-size: 11px;">BEng</a> in Aircraft Design and Engineering, <a style="font-weight: bold;color: rgb(1, 98, 195); font-size: 11px;" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, <a style="font-weight: bold; font-size: 11px;">Northwestern Polytechnical University</a>, China
-                </p>
-                <p style="font-weight: bold;font-style: italic; font-size: 11px;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic; font-size: 11px;">Oil-powered Quadrotor</p>
-            </group>
+        <div class="education-section" style="padding:0px;">
+            <table style="width:100%; border-collapse: collapse; font-family: 'Montserrat', sans-serif; color: #828282; ">
+                <!-- 清华 -->
+                <tr style="vertical-align: middle;">
+                    <td style="width:40px; padding: 8px 0; vertical-align: middle;">
+                        <img src="profile/清华logo.png" width="32" height="32" style="display:block; vertical-align: middle;">
+                    </td>
+                    <td style="padding: 8px 8px; white-space: nowrap; vertical-align: middle;">
+                        <span style="font-weight: bold; font-style: italic; font-size: 11px;">2022~now,&nbsp;</span>
+                    </td>
+                    <td style="padding: 8px 0; width:100%; vertical-align: middle;">
+                        <span style="font-size: 11px; vertical-align: middle;">
+                            <a style="font-weight: bold; font-size: 11px;">PhD</a> candidate in Computer Science and Technology, 
+                            <a style="font-weight: bold; font-size: 11px;">Tsinghua University</a>, 
+                            <a style="font-size: 11px;">China</a>
+                            <span style="font-weight: bold; font-style: italic; font-size: 11px; margin-left: 12px;">Dissertation:&nbsp;</span>
+                            <span style="font-style: italic; font-size: 11px;">Robot Interactive Learning</span>
+                        </span>
+                    </td>
+                </tr>
+                
+                <!-- 谢菲尔德 -->
+                <tr style="vertical-align: middle;">
+                    <td style="width:40px; padding: 8px 0; vertical-align: middle;">
+                        <img src="profile/UoS.jpg" width="32" height="32" style="display:block; vertical-align: middle;">
+                    </td>
+                    <td style="padding: 8px 8px; white-space: nowrap; vertical-align: middle;">
+                        <span style="font-weight: bold; font-style: italic; font-size: 11px;">2019~2020,&nbsp;</span>
+                    </td>
+                    <td style="padding: 8px 0; vertical-align: middle;">
+                        <span style="font-size: 11px; vertical-align: middle;">
+                            <a style="font-weight: bold; font-size: 11px;">MRes</a> in Control & Systems Engineering, 
+                            <a style="font-weight: bold;color: rgb(4, 113, 222); font-size: 11px;" href="https://www.sheffield.ac.uk/acse">ACSE</a>, 
+                            <a style="font-weight: bold; font-size: 11px;">the University of Sheffield</a>, UK
+                            <span style="font-weight: bold; font-style: italic; font-size: 11px; margin-left: 12px;">Dissertation:&nbsp;</span>
+                            <span style="font-style: italic; font-size: 11px;">Cooperative Transport by Swarm Robots</span>
+                        </span>
+                    </td>
+                </tr>
+                
+                <!-- 西北工业大学 -->
+                <tr style="vertical-align: middle;">
+                    <td style="width:40px; padding: 8px 0; vertical-align: middle;">
+                        <img src="profile/西工大校标大图 蓝白版.jpg" width="32" height="32" style="display:block; vertical-align: middle;">
+                    </td>
+                    <td style="padding: 8px 8px; white-space: nowrap; vertical-align: middle;">
+                        <span style="font-weight: bold; font-style: italic; font-size: 11px;">2012~2016,&nbsp;</span>
+                    </td>
+                    <td style="padding: 8px 0; vertical-align: middle;">
+                        <span style="font-size: 11px; vertical-align: middle;">
+                            <a style="font-weight: bold; font-size: 11px;">BEng</a> in Aircraft Design and Engineering, 
+                            <a style="font-weight: bold;color: rgb(1, 98, 195); font-size: 11px;" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, 
+                            <a style="font-weight: bold; font-size: 11px;">Northwestern Polytechnical University</a>, China
+                            <span style="font-weight: bold; font-style: italic; font-size: 11px; margin-left: 12px;">Dissertation:&nbsp;</span>
+                            <span style="font-style: italic; font-size: 11px;">Oil-powered Quadrotor</span>
+                        </span>
+                    </td>
+                </tr>
+            </table>
         </div>
 
     </section>
@@ -1553,7 +1593,7 @@
             <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2023~now,&emsp;</h3>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Founder</a> & Aerospace Engineer <a>@超微智导技术</a></a>, China
+                    <a style="font-weight: bold;">Founder @超微智导技术</a></a>, China
                 </h3>
             </group>
         </div>
